--- a/paginaInicial/index.css
+++ b/paginaInicial/index.css
@@ -13,51 +13,101 @@ body {
 
 }
 
-.navbar {
-    width: 300px;
-    color: #ffff;
-    list-style: none;
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #4E855D;
+    padding: 20px 0;
+    z-index: 1000;
+    transition: all 1s ease;
+    transform: translateY(-20%);
+}
+
+.header:hover {
+    transform: translateY(0);
+}
+
+/* Estilos para o conteúdo */
+.content {
+    height: 2000px; /* Para criar um scroll vertical no exemplo */
+}
+
+.header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 auto;
+    width: 80%;
+    max-width: 1200px;
 }
 
-.navbar li{
-    font-size: 22px;
+.header .titulo {
+    color: #ffffff;
+    margin-left: 20px;
 }
 
-.navbar a{
-    color: #ffff;
+.navbar {
+    list-style: none;
+    margin-right: 20px;
+}
+
+.navbar li {
+    display: inline;
+    margin-right: 20px;
+    font-size: 20px;
+    color: #ffffff;
+}
+
+.navbar a {
     text-decoration: none;
+    color: #ff0000;
 }
 
-.navbar a:hover{
-
-    color: #ffff;
-   opacity: 0.5;
+.navbar a:hover {
+    opacity: 0.7;
 }
 
-.header {
-    border-bottom: 3px solid #ffff;
+.imagemPrincipal {
+    display: flex;
+    max-width: 400px;
+    margin-left: 200px;
+    transition: transform 0.5s ease; /* Transição suave */
+
+    /* Define a escala inicial da imagem */
+    transform: scale(1);
 }
+
+/* Define a escala quando o mouse está sobre a imagem */
+.imagemPrincipal:hover {
+    transform: scale(1.2); /* Aumenta o tamanho da imagem */
+}
+
 
 .container {
     width: 80%;
-    margin: auto;
     display: flex;
+  
+    
     
 }
 
 .header .container {
+    display: flex;
     justify-content: space-between;
-  
+    background-color: #4E855D;
+        
+    margin-left: 10%;
 }
 
 .banner{
-    background-image: url("../assets/banner.jpg");
   background-position: right bottom;
     height:645px;
-    color: white;
+    color:azure;
+    text-align: center;
+    
+    
 
     
 }
@@ -70,13 +120,14 @@ body {
 }
 
 .banner .container p {
-    font-size: 32px;
-    width: 200px;
+    font-size: 30px;
+    margin-left: 50px;
+
 }
 
 
 .social{
-    background-color: #8DB899;
+    background-color: #4E855D;
     height: 750px;
 }
 
@@ -101,7 +152,7 @@ body {
 .mensagemFutebol h2{
 
     display: flex;
-    margin-left: 150px;
+    margin-left: 330px;
     margin-top: -70px;
 }
 
@@ -110,7 +161,7 @@ body {
     width: 500px;
     margin-top: -10px;
     text-align: center;
-    margin-left: 30px;
+    margin-left: 200px;
 }
 
 .mensagemFutebol .negrito{
@@ -134,13 +185,23 @@ body {
     align-items: center;
     height: 100px;
     flex-direction: column;
+    transition: transform 1s ease; /* Transição suave */
+
+    /* Define a escala inicial da imagem */
+    transform: scale(1);
+}
+
+/* Define a escala quando o mouse está sobre a imagem */
+.imagemCampo:hover {
+    transform: scale(1.2); /* Aumenta o tamanho da imagem */
+
 }
 
 .imagemCampo img{
     display: flex;
-    max-width: 25%;
+    max-width: 450px;
     margin-top: 95px;
-    margin-left: 100px;
+    margin-left: 800px;
     
 }
 
@@ -148,16 +209,27 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 100px;
+    height: 75px;
     flex-direction: column;
-   
+    transition: transform 1s ease; /* Transição suave */
+
+    /* Define a escala inicial da imagem */
+    transform: scale(1);
 }
+
+/* Define a escala quando o mouse está sobre a imagem */
+.imagemSaude:hover {
+    transform: scale(1.2); /* Aumenta o tamanho da imagem */
+
+}   
+
 
 .imagemSaude img{
     display: flex;
-    max-width: 200px;
-    margin-left: 170px;
-    margin-top: -5px;
+    max-width: 230px;
+    margin-left: 370px;
+    margin-top: -20px;
+    
 }
 
 .social .container .relatoSaude{
@@ -175,7 +247,7 @@ body {
 .mensagemSaude p{
     display: flex;
     justify-content: center;
-    margin-left: 490px;
+    margin-left: 690px;
     width: 400px;
   
 }
@@ -183,8 +255,8 @@ body {
 .mensagemSaude h2{
     display: flex;
     justify-content: center;
-    margin-left: 490px;
-    margin-top: -100px;
+    margin-left: 690px;
+    margin-top: -130px;
 
 }
 
@@ -203,7 +275,7 @@ body {
     justify-content: center;
     align-items: start;
     flex-direction: column;
-    margin-left: 100px ;
+    margin-left: 400px ;
     margin-top: -100px;
     
     
@@ -238,7 +310,7 @@ body {
 
 .social .usuario{
     display: flex;
-    background-color: #8DB899;
+    background-color: #4E855D;
     height: 600px;
 }
 
@@ -264,13 +336,15 @@ body {
     margin-left: 100px;
     margin-right: 100px;
     height: 30px;
+    width: 300px;
 }
 
 .escrever #input_escrever{
     display: flex;
     margin-left: 100px;
     margin-right: 100px;
-    width: 350px;
+    width: 410px;
+    height: 180px;
     padding: 10px 10px 100px
     
 }
@@ -287,6 +361,7 @@ body {
     color: white;
     border-radius: 10px;
     padding: 5px 30px;
+    cursor: pointer;
 }
 
 .escrever button:hover{
@@ -298,7 +373,7 @@ body {
 
 .footer {
     display: flex;
-    background-color: #4E855D;
+    background-color: #c3f3cf;
     height: 50px;
 }
 
@@ -309,3 +384,4 @@ body {
     align-items: center;
     margin-left: 450px;    
 }
+
