--- a/cadastro/cadastro.css
+++ b/cadastro/cadastro.css
@@ -18,6 +18,7 @@ body {
         flex-direction: column;
         display: flex;
         background-color: rgb(34, 84, 60);
+        border-radius: 5%;
         height: 55%;
         width: 30%;
         align-items: center;
