--- a/login/login.css
+++ b/login/login.css
@@ -73,6 +73,7 @@ body{
 .login {
     display: flex;
     background-color: rgb(34, 84, 60);
+    border-radius: 5%;
     justify-content: center;
     align-items: center;
     width: 30%;     
