--- a/public/css/index.css
+++ b/public/css/index.css
@@ -328,8 +328,9 @@ img:hover {
 transform: scale(1.2); /* Aumenta o tamanho da imagem */
 }
 
-.questionario h2{
+.questionario h4{
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .footer {
