--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -60,6 +60,7 @@ body {
         height: 4vh;
         background-color: black;
         color: white;
+        margin-left: 70px;
 
 }
 
@@ -68,6 +69,8 @@ body {
         color: black;
         opacity: 0.20s;
 }
+
+
 
 .container p {
         margin-top: 0%;
@@ -88,6 +91,7 @@ body {
         text-align: start;
         width: 100%;
         font-size: 1.3vw;
+        margin-top: -50px;
 }
 
 .logo a{
@@ -117,23 +121,29 @@ body {
       
       .alerta_erro{
         display: flex;
-        justify-content: flex-end;
+        
+      }
+    
+      .alerta_erro  .card_erro {
+        display: none;
+        margin-top: -170px;
+        
       }
       
       .card_erro {
         display: none;
-        background-color: #fff;
+        background-color: #86f296;
         color: black;
         width: 230px;
         position: fixed;
-        border-radius: 4px;
-        border: #e6005a 3px solid;
-        padding: 10px;
-        margin-right: 10%;
+        border-radius: 30px;
+        border: green 3px solid;
+        padding: 20px;
+        
+        
       }
       
       .card_erro #mensagem_erro{
         font-weight: 500;
         font-size: 20px;
       }
-      
