--- a/public/css/login.css
+++ b/public/css/login.css
@@ -119,6 +119,7 @@ body{
 .loading-div {
     width: 50px;
     display: none;
+    margin-top: 10px;
   }
   
   .loading-div img {
@@ -127,26 +128,34 @@ body{
   }
 
   #div_erros_login {
-    display: none
+    display: none;
+
   }
   
   /* FORMULARIO */
   
   .alerta_erro{
     display: flex;
-    justify-content: flex-end;
+    
+  }
+
+  .alerta_erro  .card_erro {
+    display: none;
+    margin-top: -300px;
+    margin-left: 200px;
   }
   
   .card_erro {
     display: none;
-    background-color: #fff;
+    background-color: #86f296;
     color: black;
     width: 230px;
     position: fixed;
-    border-radius: 4px;
-    border: #e6005a 3px solid;
-    padding: 10px;
-    margin-right: 10%;
+    border-radius: 30px;
+    border: green 3px solid;
+    padding: 20px;
+    
+    
   }
   
   .card_erro #mensagem_erro{
