--- a/public/css/inicio.css
+++ b/public/css/inicio.css
@@ -76,3 +76,66 @@ ul li a {
   opacity: 0.7;
   font-size: 22px;
 }
+
+.controle{
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+  margin-top: 200px;
+}
+
+.questionario1 img{
+  display: flex;
+  width: 200px;
+  height: 200px;
+}
+
+.questionario1 p{
+  display: flex;
+  margin-top: 10px;
+  width: 300px;
+  color: white;
+}
+
+.questionario1 button{
+  display: flex;
+  padding: 3px 30px 0px;
+  text-align: center;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  margin-left: 60px;
+}
+
+.questionario1 button:hover{
+  background-color:#4E855D;
+}
+
+.Ranking img{
+  display: flex;
+  width: 200px;
+  height: 260px;
+  margin-top: -30px;
+}
+
+.Ranking p{
+  display: flex;
+  margin-top: -30px;
+  width: 200px;
+  color: white;
+}
+
+.Ranking button{
+  display: flex;
+  padding: 3px 30px 0px;
+  margin-top: 15px;
+  text-align: center;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  margin-left: 40px;
+}
+
+.Ranking button:hover{
+  background-color:#4E855D;
+}
