--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -12,6 +12,7 @@ body {
         text-align: center;
         height: 100vh;
         width: 100vw;
+        background: linear-gradient(45deg, #152e1a, transparent);
 }
 
 .container {
@@ -25,6 +26,7 @@ body {
         justify-content: center;
         color: white;
         padding: 0.5%;
+        background: linear-gradient(45deg, #70e28f, transparent);
 }
 
 .container input {
