--- a/public/css/inicio.css
+++ b/public/css/inicio.css
@@ -10,6 +10,7 @@ body {
   background-size: cover; /* Ajusta a imagem para cobrir toda a área */
   background-attachment: fixed; /* Mantém o background fixo durante o scroll */
   overflow-x: hidden; /* Evita a rolagem horizontal */
+
 }
 
 .header {
@@ -24,7 +25,7 @@ body {
   z-index: 1000;
   transition: all 1s ease;
   transform: translateY(-20%);
-  background-color: #4E855D;
+  background: linear-gradient(45deg, #1b4f2b, transparent);
   box-sizing: border-box; /* Certifica-se que padding não aumenta a largura total */
   
 }
