Foi adicionado mais uma dashboard, onde foi implemntado a evolução do usuario!

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -172,6 +172,11 @@ nav a:hover {
     color: white;
 }
 
+.mensagemFutebol .negrito{
+    font-weight: bold;
+    
+}
+
 
 .social .container .relatoFutebol {
     display: flex;
