--- a/public/dashboard/dashUsuario.css
+++ b/public/dashboard/dashUsuario.css
@@ -89,7 +89,7 @@
     justify-content: center;
     display: flex;
     width: 100vw;
-    height: 90vh;
+    height: 72vh;
   }
 
   .ranking{
@@ -98,4 +98,18 @@
     border: 0.03vw solid #ffffff;
     border-radius: 45px;
     padding: 30px;
+  }
+
+
+  .kpi{
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15vh;
+    width: 20vw;
+    height: 5vh;
+    border-radius: 5%;
+    margin-left: 40vw;
+    
   }
